[package]
name = "SolML"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.7.0"
reqwest = "0.11.4"
serde_json = "1.0.73"
tokio = { version = "1", features = ["full"] }
ndarray = "0.16.4"
dotenv = "0.15.0"
