[package]
name = "SolML"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-reduction = "0.7.0"
isahc = "1.4.1" 
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
solana-client = "1.15.3"
solana-sdk = "1.15.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15.6"
